[gd_scene load_steps=32 format=3 uid="uid://ds26vp38i31gt"]

[ext_resource type="FontFile" uid="uid://cojhuxa1di8wk" path="res://Assets/UI/FONT/CharlesWright-Bold.otf" id="1_3ejjl"]
[ext_resource type="Texture2D" uid="uid://ctx4462e0vlm3" path="res://Assets/Characters/Enemies/Ghaster/ghaster.png" id="2_ojstu"]
[ext_resource type="FontVariation" uid="uid://j16qpduaga5p" path="res://Assets/UI/FONT/CharlesWright.tres" id="3_fflh0"]
[ext_resource type="Script" path="res://Script/GUI.gd" id="4_6ljl8"]
[ext_resource type="Texture2D" uid="uid://c8q67xnfqv4wn" path="res://Assets/Characters/Enemies/Flapper/frame1.png" id="4_nnm15"]
[ext_resource type="Texture2D" uid="uid://dbg6chgtlywq4" path="res://Assets/Characters/Enemies/Crawler/crawler_ground.png" id="5_b8gj2"]
[ext_resource type="Texture2D" uid="uid://rbtqu2d68lk3" path="res://Assets/UI/Delete_File_Button/deletefilebutton3.png" id="5_hf68f"]
[ext_resource type="PackedScene" uid="uid://cvcmgx506f6ka" path="res://crawler_air_btn_container.tscn" id="6_bs73g"]
[ext_resource type="Texture2D" uid="uid://b31sf1djyqova" path="res://Assets/UI/Delete_File_Button/deletefilebutton3_hover.png" id="6_nef4g"]
[ext_resource type="Texture2D" uid="uid://ct25grf6ywi0j" path="res://Assets/Background/longer_background_worked.png" id="7_07fk5"]
[ext_resource type="Texture2D" uid="uid://ck3k2jqpxi0p6" path="res://Assets/UI/Delete_File_Button/deletefilebutton3_disabled.png" id="7_f5f10"]
[ext_resource type="Texture2D" uid="uid://bjw2i2nmumdck" path="res://Assets/Background/black_ground.png" id="8_q8ebd"]
[ext_resource type="Texture2D" uid="uid://1is75ejgoxqr" path="res://Assets/UI/Play_Button/playbuttonv3_normal.png" id="8_wgx34"]
[ext_resource type="Texture2D" uid="uid://b8yi431uciey2" path="res://Assets/UI/Play_Button/playbuttonv3_hover.png" id="9_8d0m3"]
[ext_resource type="Texture2D" uid="uid://bl6e5uoumbaj6" path="res://Assets/Background/ground_tile_3.png" id="9_qvc2e"]
[ext_resource type="Texture2D" uid="uid://mwbt7kgr7o6p" path="res://Assets/UI/Play_Button/playbuttonv3_disabled.png" id="10_ubeeq"]
[ext_resource type="Texture2D" uid="uid://dlsipr2xsajom" path="res://Assets/UI/Save_Button/savebuttonv3_normal.png" id="11_ydrsa"]
[ext_resource type="Texture2D" uid="uid://beqx6ef7v5yur" path="res://Assets/UI/Save_Button/savebuttonv3_hover.png" id="12_decvk"]
[ext_resource type="Texture2D" uid="uid://n146d7b8i1w0" path="res://Assets/UI/Save_Button/savebuttonv3_disabled.png" id="13_xdgt1"]
[ext_resource type="Texture2D" uid="uid://ciegrwm5i4l0p" path="res://Assets/UI/New_Button/newbutton_new.png" id="14_6cotn"]
[ext_resource type="AudioStream" uid="uid://bmqn5mn4rg3ys" path="res://Assets/BGM/2019-05-01_-_Undercover_Spy_Agent_-_David_Fesliyan.mp3" id="21_2d0ef"]
[ext_resource type="PackedScene" uid="uid://ddefxeug0fug3" path="res://Scenes/quit_button.tscn" id="21_20ur6"]
[ext_resource type="PackedScene" uid="uid://dy4wnm8hd1fpu" path="res://Scenes/Player/player_character.tscn" id="23_aqmxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuaid"]
size = Vector2(1279.57, 79.8015)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srsn5"]
size = Vector2(1280.05, 88.8076)

[sub_resource type="Theme" id="Theme_2chbh"]

[sub_resource type="LabelSettings" id="LabelSettings_t7fty"]
line_spacing = -1.0
font = ExtResource("1_3ejjl")
font_size = 23
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.0431373)

[sub_resource type="LabelSettings" id="LabelSettings_khcv1"]
line_spacing = -1.0
font = ExtResource("3_fflh0")
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_lgl6c"]
line_spacing = 2.0
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmtcs"]
bg_color = Color(0.803922, 0.803922, 0.803922, 0.478431)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hid5"]
bg_color = Color(1, 1, 1, 0)
draw_center = false
border_width_left = 16
border_width_right = 16
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Editor" type="Node"]

[node name="EditorScreen" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="EditorScreen"]
texture_filter = 1
position = Vector2(800, 440)
scale = Vector2(4, 4)
texture = ExtResource("7_07fk5")

[node name="Boundaries" type="Node2D" parent="EditorScreen"]

[node name="Top_boundary" type="StaticBody2D" parent="EditorScreen/Boundaries"]

[node name="Sprite2D" type="Sprite2D" parent="EditorScreen/Boundaries/Top_boundary"]
z_index = 1
z_as_relative = false
position = Vector2(639.989, 39.9044)
scale = Vector2(63.999, 3.99)
texture = ExtResource("8_q8ebd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditorScreen/Boundaries/Top_boundary"]
position = Vector2(639.783, 39.9099)
shape = SubResource("RectangleShape2D_tuaid")

[node name="Ground" type="StaticBody2D" parent="EditorScreen/Boundaries"]

[node name="Sprite2D" type="Sprite2D" parent="EditorScreen/Boundaries/Ground"]
texture_filter = 1
position = Vector2(657.127, 764.342)
scale = Vector2(4.107, 4.585)
texture = ExtResource("9_qvc2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditorScreen/Boundaries/Ground"]
position = Vector2(640.023, 795.596)
shape = SubResource("RectangleShape2D_srsn5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 420)

[node name="GUI" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 285.0
offset_top = -419.0
offset_right = 639.0
offset_bottom = 421.0
script = ExtResource("4_6ljl8")

[node name="Panel" type="Panel" parent="Camera2D/GUI"]
z_index = 1
layout_mode = 1
anchors_preset = -1
offset_left = -17.0
offset_right = 354.0
offset_bottom = 840.0

[node name="DeleteButton" type="TextureButton" parent="Camera2D/GUI/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = -72.6378
offset_top = 761.649
offset_right = -40.6378
offset_bottom = 793.649
scale = Vector2(2, 2)
theme = SubResource("Theme_2chbh")
texture_normal = ExtResource("5_hf68f")
texture_pressed = ExtResource("6_nef4g")
texture_hover = ExtResource("6_nef4g")
texture_disabled = ExtResource("7_f5f10")

[node name="PlayButton" type="TextureButton" parent="Camera2D/GUI/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 6.02246
offset_top = 765.551
offset_right = 116.022
offset_bottom = 802.551
scale = Vector2(1.6, 1.6)
texture_normal = ExtResource("8_wgx34")
texture_pressed = ExtResource("9_8d0m3")
texture_hover = ExtResource("9_8d0m3")
texture_disabled = ExtResource("10_ubeeq")
stretch_mode = 5

[node name="SaveButton" type="TextureButton" parent="Camera2D/GUI/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 184.201
offset_top = 765.682
offset_right = 280.201
offset_bottom = 797.682
scale = Vector2(1.9, 1.9)
texture_normal = ExtResource("11_ydrsa")
texture_pressed = ExtResource("12_decvk")
texture_hover = ExtResource("12_decvk")
texture_disabled = ExtResource("13_xdgt1")

[node name="CreateNewButton" type="TextureButton" parent="Camera2D/GUI/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 7.0
offset_right = 97.0
offset_bottom = 71.0
texture_normal = ExtResource("14_6cotn")
stretch_mode = 5

[node name="GhasterButton" type="Button" parent="Camera2D/GUI/Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 90.0
offset_right = 169.0
offset_bottom = 249.0
flat = true
icon_alignment = 1
text_direction = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/GUI/Panel/GhasterButton"]
layout_mode = 0
offset_right = 125.0
offset_bottom = 152.0
scale = Vector2(1.1, 1.1)

[node name="Label" type="Label" parent="Camera2D/GUI/Panel/GhasterButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "GHASTER"
label_settings = SubResource("LabelSettings_t7fty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Camera2D/GUI/Panel/GhasterButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_ojstu")
expand_mode = 4
stretch_mode = 5

[node name="FlapperButton" type="Button" parent="Camera2D/GUI/Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 90.0
offset_right = 346.0
offset_bottom = 250.0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/GUI/Panel/FlapperButton"]
layout_mode = 0
offset_left = 8.0
offset_right = 134.0
offset_bottom = 153.0
scale = Vector2(1.1, 1.1)

[node name="Label" type="Label" parent="Camera2D/GUI/Panel/FlapperButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "FLAPPER"
label_settings = SubResource("LabelSettings_khcv1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Camera2D/GUI/Panel/FlapperButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_nnm15")
expand_mode = 4
stretch_mode = 5

[node name="CrawlerGroundButton" type="Button" parent="Camera2D/GUI/Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 268.0
offset_right = 169.0
offset_bottom = 448.0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/GUI/Panel/CrawlerGroundButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.066
anchor_bottom = 0.066
offset_left = 3.0
offset_top = -11.88
offset_right = 127.0
offset_bottom = 158.12
scale = Vector2(1.1, 1.1)

[node name="Label" type="Label" parent="Camera2D/GUI/Panel/CrawlerGroundButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "CRAWLER (GROUND)"
label_settings = SubResource("LabelSettings_lgl6c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/GUI/Panel/CrawlerGroundButton/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_b8gj2")
expand_mode = 5
stretch_mode = 5

[node name="CrawlerAirButton" type="Button" parent="Camera2D/GUI/Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 265.0
offset_right = 341.0
offset_bottom = 437.0
flat = true

[node name="CrawlerAirCont" parent="Camera2D/GUI/Panel/CrawlerAirButton" instance=ExtResource("6_bs73g")]
layout_mode = 0
offset_left = 35.0
offset_right = 95.0
offset_bottom = 151.0
scale = Vector2(1.15, 1.15)

[node name="TextureRect2" parent="Camera2D/GUI/Panel/CrawlerAirButton/CrawlerAirCont/TextureRect3" index="0"]
offset_left = -1.36554
offset_top = 7.21776
offset_right = 29.5495
offset_bottom = 38.1328

[node name="TextureRect" parent="Camera2D/GUI/Panel/CrawlerAirButton/CrawlerAirCont/TextureRect3" index="1"]
offset_left = -32.0
offset_top = 23.0
offset_right = 8.0
offset_bottom = 61.0

[node name="Quit_Button" parent="Camera2D/GUI/Panel" instance=ExtResource("21_20ur6")]
layout_mode = 0
offset_left = 307.879
offset_top = 12.3431
offset_right = 332.879
offset_bottom = 38.3431
scale = Vector2(2, 2)
icon_alignment = 1

[node name="WarningLabel" type="Label" parent="Camera2D/GUI/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 14.009
offset_top = 689.664
offset_right = 373.009
offset_bottom = 709.664
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "A FILE UNDER THIS NAME ALREADY EXISTS"

[node name="LineEdit" type="LineEdit" parent="Camera2D/GUI/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 713.0
offset_right = 360.0
offset_bottom = 757.0
placeholder_text = "Enter level name"
max_length = 20

[node name="HScrollBar" type="HScrollBar" parent="Camera2D"]
z_index = 1
offset_left = -614.0
offset_top = -390.0
offset_right = 252.0
offset_bottom = -370.0
theme_override_styles/scroll = SubResource("StyleBoxFlat_hmtcs")
theme_override_styles/grabber = SubResource("StyleBoxFlat_6hid5")
max_value = 30000.0
step = 1.0

[node name="Player" parent="Camera2D" instance=ExtResource("23_aqmxl")]
position = Vector2(-500, 20)
scale = Vector2(1.5, 1.5)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_2d0ef")
autoplay = true

[connection signal="pressed" from="Camera2D/GUI/Panel/DeleteButton" to="Camera2D/GUI" method="_on_delete_button_pressed"]
[connection signal="pressed" from="Camera2D/GUI/Panel/PlayButton" to="Camera2D/GUI" method="_on_play_button_pressed"]
[connection signal="pressed" from="Camera2D/GUI/Panel/SaveButton" to="Camera2D/GUI" method="_on_save_button_pressed"]
[connection signal="pressed" from="Camera2D/GUI/Panel/CreateNewButton" to="Camera2D/GUI" method="_on_create_new_button_pressed"]
[connection signal="text_changed" from="Camera2D/GUI/Panel/LineEdit" to="Camera2D/GUI" method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Camera2D/GUI/Panel/LineEdit" to="Camera2D/GUI" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Camera2D/HScrollBar" to="Camera2D/GUI" method="_on_h_scroll_bar_value_changed"]

[editable path="Camera2D/GUI/Panel/CrawlerAirButton/CrawlerAirCont"]
